feat(cu04):implementar formulario para alta de activo)
